a1/brendan_gordon/TEST_PROGRAMS/invalidtype/grady_weber/incompatibleCast.min
#incompatible cast
var x : int;
var y : float;
y = 3.14;
x = y;

